change document height to 100% instead og 100vh. the latter gave issues on mobile safari

--- a/app/views/shared/layout/main/main.styl
+++ b/app/views/shared/layout/main/main.styl
@@ -1,6 +1,6 @@
 
 html, body, #page-wrapper {
-	height 100vh
+	height 100%
 	width 100%
 	overflow-x hidden
 	background $content_bg
